SigmaCodebackup3rdSep/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <formula>Total_count__c -  Booked_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Booked Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Format__c</fullName>
        <formula>TEXT(DAY(Event_date__c))+&quot;-&quot;+TEXT(MONTH( Event_date__c ))+&quot;-&quot; +TEXT(YEAR(Event_date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_date__c</fullName>
        <label>Event date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_end_date__c</fullName>
        <label>Event end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_count__c</fullName>
        <label>Total count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiting_list__c</fullName>
        <label>Waiting list</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Destination__c</columns>
        <columns>Event_date__c</columns>
        <columns>Event_end_date__c</columns>
        <columns>Total_count__c</columns>
        <columns>Waiting_list__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVENT-{0000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>